Address several Findbugs reports, and add an excludes filter-file