@@ -25,14 +25,14 @@ import org.hornetq.core.server.ServerMessage;
 
 /**
 * This class implements a HornetQ filter
-* 
+*
 * @author <a href="mailto:tim.fox@jboss.com">Tim Fox</a>
 * @author <a href="jmesnil@redhat.com">Jeff Mesnil</a>
-* 
+*
 * HornetQ filters have the same syntax as JMS 1.1 selectors, but the identifiers are different.
-* 
+*
 * Valid identifiers that can be used are:
-* 
+*
 * HQPriority - the priority of the message
 * HQTimestamp - the timestamp of the message
 * HQDurable - "DURABLE" or "NON_DURABLE"
@@ -40,16 +40,16 @@ import org.hornetq.core.server.ServerMessage;
 * HQSize - the encoded size of the full message in bytes
 * HQUserID - the user specified ID string (if any)
 * Any other identifers that appear in a filter expression represent header values for the message
-* 
+*
 * String values must be set as <code>SimpleString</code>, not <code>java.lang.String</code> (see JBMESSAGING-1307).
 * Derived from JBoss MQ version by
-* 
+*
 * @author <a href="mailto:Norbert.Lataille@m4x.org">Norbert Lataille</a>
 * @author <a href="mailto:jplindfo@helsinki.fi">Juha Lindfors</a>
 * @author <a href="mailto:jason@planet57.com">Jason Dillon</a>
 * @author <a href="mailto:Scott.Stark@jboss.org">Scott Stark</a>
 * @author <a href="mailto:tim.fox@jboss.com">Tim Fox</a>
-*  
+*
 * @version    $Revision: 3569 $
 *
 * $Id: Selector.java 3569 2008-01-15 21:14:04Z timfox $
@@ -174,9 +174,6 @@ public class FilterImpl implements Filter
       }
    }
 
-   /* (non-Javadoc)
-    * @see java.lang.Object#hashCode()
-    */
    @Override
    public int hashCode()
    {
@@ -186,9 +183,6 @@ public class FilterImpl implements Filter
       return result;
    }
 
-   /* (non-Javadoc)
-    * @see java.lang.Object#equals(java.lang.Object)
-    */
    @Override
    public boolean equals(Object obj)
    {
@@ -209,9 +203,6 @@ public class FilterImpl implements Filter
       return true;
    }
 
-   /* (non-Javadoc)
-    * @see java.lang.Object#toString()
-    */
    @Override
    public String toString()
    {
@@ -229,7 +220,7 @@ public class FilterImpl implements Filter
       }
       else if (FilterConstants.HORNETQ_PRIORITY.equals(fieldName))
       {
-         return new Integer(msg.getPriority());
+         return Integer.valueOf(msg.getPriority());
       }
       else if (FilterConstants.HORNETQ_TIMESTAMP.equals(fieldName))
       {
